# riscos-access-server

./: .gitignore  CMakeLists.txt  README.md  access.conf  access.conf.sample
.github/: copilot-instructions.md
admin/: CMakeLists.txt
admin/src/: ConfigIO.cpp  ConfigIO.h  ControlPanel.cpp  ControlPanel.h  MainFrame.cpp  MainFrame.h  MimePanel.cpp  MimePanel.h  PrintersPanel.cpp  PrintersPanel.h  ServerPanel.cpp  ServerPanel.h  SharesPanel.cpp  SharesPanel.h  main.cpp
src/: CMakeLists.txt  accessplus.c  accessplus.h  broadcast.c  broadcast.h  config.c  config.h  handle.c  handle.h  log.c  log.h  main.c  net.c  net.h  ops.c  ops.h  platform.c  platform.h  printer.c  printer.h  riscos.c  riscos.h  server.c  server.h
